src/objects/BRNSHRK__BrainsharkActivity__c.object
<CustomObject>
    <description>Tracks views and invitations</description>
    <fields>
        <fullName>BRNSHRK__ActivityType__c</fullName>
        <label>ActivityType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkPresentation__c</fullName>
        <label>BrainsharkPresentation</label>
        <referenceTo>BRNSHRK__BrainsharkPresentation__c</referenceTo>
        <relationshipName>R00N50000001I5fbEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkViewKey__c</fullName>
        <label>Brainshark View Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CampaignID__c</fullName>
        <formula>BRNSHRK__RelatedCampaign__c &amp; BRNSHRK__RelatedOpportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001I5fqEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCompany__c</fullName>
        <label>Guestbook Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom01__c</fullName>
        <label>Guestbook Custom 01</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom02__c</fullName>
        <label>Guestbook Custom 02</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom03__c</fullName>
        <label>Guestbook Custom 03</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookDept__c</fullName>
        <label>Guestbook Dept</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookEmail__c</fullName>
        <label>Guestbook Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookFirstName__c</fullName>
        <label>Guestbook First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookLastName__c</fullName>
        <label>Guestbook Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookPhone__c</fullName>
        <label>Guestbook Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookTitle__c</fullName>
        <label>Guestbook Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N50000001I5fwEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__MemberID__c</fullName>
        <formula>BRNSHRK__Contact__c &amp; BRNSHRK__Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__NumberOfSlides__c</fullName>
        <label>Number of Slides</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__OpportunityStage__c</fullName>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentDurationViewed__c</fullName>
        <formula>IF(BRNSHRK__ViewingTime__c &lt;= 0, 0, if(BRNSHRK__Duration__c&lt;=0,0,if(BRNSHRK__ViewingTime__c / BRNSHRK__Duration__c &gt; 1, 1, BRNSHRK__ViewingTime__c / BRNSHRK__Duration__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Audio Viewed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentSlidesViewed__c</fullName>
        <formula>IF (BRNSHRK__SlidesViewed__c &lt;= 0,0, IF (BRNSHRK__NumberOfSlides__c &lt;= 0,0, if(BRNSHRK__SlidesViewed__c / BRNSHRK__NumberOfSlides__c &gt; 1, 1, BRNSHRK__SlidesViewed__c / BRNSHRK__NumberOfSlides__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Slides Viewed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Pid__c</fullName>
        <label>Presentation ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PointsScored__c</fullName>
        <label>Points Scored</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PossiblePoints__c</fullName>
        <label>Possible Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresDescription__c</fullName>
        <label>Presentation Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresFolder__c</fullName>
        <label>Presentation Folder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001I5feEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>R00N50000001I5fkEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N50000001I5fnEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N50000001I5ftEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001I5fzEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipName>R00N50000001I5g6EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Score__c</fullName>
        <formula>IF(BRNSHRK__PossiblePoints__c = 0, 0, IF(ISNULL(BRNSHRK__PossiblePoints__c), 0, BRNSHRK__PointsScored__c / BRNSHRK__PossiblePoints__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentBody__c</fullName>
        <label>Sent Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001I5gAEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentComments__c</fullName>
        <label>Sent Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentDateTime__c</fullName>
        <label>Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentSubject__c</fullName>
        <label>Sent Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SlidesViewed__c</fullName>
        <label>Slides Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sub_Type__c</fullName>
        <label>Type2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion Letter</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Intro</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__Topic__c</fullName>
        <label>Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__TrackingCode__c</fullName>
        <label>Tracking Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Type__c</fullName>
        <label>Type1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__UserID__c</fullName>
        <formula>BRNSHRK__SentBy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressCity__c</fullName>
        <label>View IP Address City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressCountry__c</fullName>
        <label>View IP Address Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressRegion__c</fullName>
        <label>View IP Address Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Viewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001I5g9EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedComments__c</fullName>
        <label>Viewed Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedDateTime__c</fullName>
        <label>Viewed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewerName__c</fullName>
        <label>Viewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewingTime__c</fullName>
        <label>Viewing Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Minutes__c</fullName>
        <formula>FLOOR( BRNSHRK__ViewingTime__c / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Seconds__c</fullName>
        <formula>BRNSHRK__ViewingTime__c  - BRNSHRK__Viewing_Minutes__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Time_MM_SS__c</fullName>
        <formula>&quot;Minutes:&quot; &amp; Text(BRNSHRK__Viewing_Minutes__c) &amp; &quot; Seconds:&quot; &amp; Text(BRNSHRK__Viewing_Seconds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Time MM:SS</label>
        <type>Text</type>
    </fields>
    <label>Brainshark Activity</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACT-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>BrainsharkActivity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>